--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorGeryWhite">#FCFCFC</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlue">#00AFFF</color>
+    <color name="colorBlueWhite">#6FC4FF</color>
 </resources>
