--- a/app/src/main/res/layout/activity_question_opened.xml
+++ b/app/src/main/res/layout/activity_question_opened.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGeryGeryWhite"
-    tools:context=".QuestionOpenedActivity">
+    tools:context=".control.QuestionOpenedActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,7 +14,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:background="@color/colorGeryGeryWhite">
 
             <LinearLayout
                 android:id="@+id/question"
@@ -23,7 +24,7 @@
                 android:orientation="vertical"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:background="@color/colorGery"
+                android:background="@color/colorBlueWhite"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
@@ -39,11 +40,24 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/show_author_q"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="author" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/ic_round"/>
+
+                    <TextView
+                        android:id="@+id/show_author_q"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:text="author" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/show_content_q"
@@ -90,7 +104,7 @@
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:background="@color/colorGeryGeryWhite"
+                android:background="@color/colorBlueWhite"
                 app:layout_constraintTop_toBottomOf="@+id/question" />
 
             <androidx.recyclerview.widget.RecyclerView
