--- a/app/src/main/res/layout/activity_real_time_yq.xml
+++ b/app/src/main/res/layout/activity_real_time_yq.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RealTimeYQActivity">
+    tools:context=".control.RealTimeYQActivity">
 
-<!--    <com.seven749.rainbowbihu.YQTitle-->
+<!--    <com.seven749.rainbowbihu.view.YQTitle-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content" />-->
 
