--- a/app/src/main/res/layout/answer_item.xml
+++ b/app/src/main/res/layout/answer_item.xml
@@ -11,14 +11,28 @@
         android:paddingRight="20dp"
         android:background="@color/colorGeryWhite">
 
-        <TextView
-            android:id="@+id/show_author_a"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="author"
-            android:textColor="@color/colorBlack"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/show_avatar_a"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/ic_round"/>
+            <TextView
+                android:id="@+id/show_author_a"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:text="author"
+                android:textColor="@color/colorBlack"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/show_content_a"
@@ -27,7 +41,7 @@
             android:text="content..."
             android:textSize="20sp"
             android:textColor="@color/colorBlack"
-            android:lines="5"
+            android:lines="3"
             android:maxLines="100"/>
 
         <TextView
