--- a/app/src/main/res/layout/activity_question_opened.xml
+++ b/app/src/main/res/layout/activity_question_opened.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGeryGeryWhite"
-    tools:context=".control.QuestionOpenedActivity">
+    tools:context=".view.QuestionOpenedActivity">
 
     <ScrollView
         android:layout_width="match_parent"
