--- a/app/src/main/res/layout/activity_real_time_yq.xml
+++ b/app/src/main/res/layout/activity_real_time_yq.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".control.RealTimeYQActivity">
+    tools:context=".view.RealTimeYQActivity">
 
 <!--    <com.seven749.rainbowbihu.view.YQTitle-->
 <!--        android:layout_width="wrap_content"-->
